Button centering content on Safari bugfix

--- a/src/scss/sections/_form.scss
+++ b/src/scss/sections/_form.scss
@@ -103,6 +103,7 @@ input[type=submit], .btn {
 .btn {
   > span {
     border-bottom: 1px solid transparent;
+    margin: auto;
   }
 }
 
